--- a/hits/hits intern.html
+++ b/hits/hits intern.html
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a href="hits intern.html" class="pull-left">
-            <div><img id="logo" src='../assets/download.jpg' width="150px"></div>
+            <div><img id="logo" src='../assets/logo-removebg-preview (1).png' width="150px"></div>
           </a>
         </div>
           <ul id="nav-list"class="nav navbar-nav navbar-left">
