--- a/hits/intern.html
+++ b/hits/intern.html
@@ -67,7 +67,8 @@
   <div class="Canvas">
     <h1 style="text-align: center;"><span style="font-size:95px;color:pink;">C</span>ategories</h1>
     <hr>
-    <div class="container">
+    <div class="container-fluid">
+      
         <div class="row no-gutters">
           <div class="col-md-4 imageCategory" >
             <a href="./categoryMan.html"><img width="100%" src="./heerockbags/women1.jpg"   alt="1">
@@ -75,9 +76,10 @@
             </a>
           </div>
         <div class="col-md-4 imageCategory" >
-           <a href="categoryMan.html"> <img width="100%"src="./heerockbags/featuredProducts-3.jpg"  alt="1">
-            <div class="content"><h2>Men</h2></div>
-           </a>            
+            <a href="./categoryMan.html"><img width="100%" src="./heerockbags/featuredProducts-1.jpeg"   alt="1">
+              <div class="content"><h2>Men</h2></div>
+            </a>
+               
         </div>
         <div class="col-md-4 imageCategory">
           <a href="categoryMan.html ">  <img width="100%"src="./heerockbags/women1.jpg"   alt="1">
