Images updated on main page

--- a/hits/intern.html
+++ b/hits/intern.html
@@ -71,18 +71,18 @@
       
         <div class="row no-gutters">
           <div class="col-md-4 imageCategory" >
-            <a href="./categoryMan.html"><img width="100%" src="./heerockbags/women1.jpg"   alt="1">
+            <a href="./categoryMan.html"><img width="100%" src="./heerockbags/women.jpg"   alt="1">
               <div class="content"><h2>Women</h2></div>
             </a>
           </div>
         <div class="col-md-4 imageCategory" >
-            <a href="./categoryMan.html"><img width="100%" src="./heerockbags/featuredProducts-1.jpeg"   alt="1">
+            <a href="./categoryMan.html"><img width="100%" src="./heerockbags/men.jpg"   alt="1">
               <div class="content"><h2>Men</h2></div>
             </a>
                
         </div>
         <div class="col-md-4 imageCategory">
-          <a href="categoryMan.html ">  <img width="100%"src="./heerockbags/women1.jpg"   alt="1">
+          <a href="categoryMan.html ">  <img width="100%"src="./heerockbags/kids.jpg"   alt="1">
             <div class="content"><h2>Kids</h2></div>
           </a>
         </div>
