--- a/hits/intern.html
+++ b/hits/intern.html
@@ -26,7 +26,7 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a href="hits intern.html" class="pull-left"><div><h2 id="logo"><strong>HEEROCK</strong></h2></div></a>
+          <a href="intern.html" class="pull-left"><div><h2 id="logo"><strong>HEEROCK</strong></h2></div></a>
         </div>
         <!-- <div class="collapse navbar-collapse" id="navbarsExampleDefault"> -->
         <div>
@@ -36,9 +36,9 @@
           <li class="nav-item"><a class="nav-link" id="link1" href="#"> Our Story</a></li>
           <li class="nav-item dropbtn"><a class="nav-link" href="#" id="link1">Category</a>
           <div class="dropdown-content">
-            <a href="#">MAN</a>
-            <a href="#">WOMAN</a>
-            <a href="#">KIDS</a>
+            <a href="./CategoryHits/categoryToAll.html">MAN</a>
+            <a href="./CategoryHits/categoryToAll.html">WOMAN</a>
+            <a href="./CategoryHits/categoryToAll.html">KIDS</a>
           </div>
           </li>
           <li class="nav-item"><a href="./contact.html" class="nav-link" id="link1"> Contact Us</a></li>
@@ -115,17 +115,17 @@
     <div class="container-fluid">
         <div class="row no-gutters">
           <div class="col-sm-4 imageCategory" >
-            <a href="./categoryMan.html"><img width="100%" src="./assets/women.jpg"   alt="1">
+            <a href="./CategoryHits/categoryToAll.html"><img width="100%" src="./assets/women.jpg"   alt="1">
               <div class="content"><h2>Women</h2></div>
             </a>
           </div>
         <div class="col-sm-4 imageCategory" >
-            <a href="./categoryMan.html"><img width="100%" src="./assets/man2.jpg"   alt="1">
+            <a href="./CategoryHits/categoryToAll.html"><img width="100%" src="./assets/man2.jpg"   alt="1">
               <div class="content"><h2>Men</h2></div>
             </a>
         </div>
         <div class="col-sm-4 imageCategory">
-          <a href="categoryMan.html ">  <img width="100%"src="./assets/kids.jpg"   alt="1">
+          <a href="./CategoryHits/categoryToAll.html">  <img width="100%"src="./assets/kids.jpg"   alt="1">
             <div class="content"><h2>Kids</h2></div>
           </a>
         </div>
