--- a/hits/New_Arrival.html
+++ b/hits/New_Arrival.html
@@ -36,9 +36,9 @@
               <li class="nav-item"><a class="nav-link" id="link1" href="Our_Story.html"> Our Story</a></li>
               <li class="nav-item dropbtn"><a class="nav-link" href="#" id="link1">Category</a>
               <div class="dropdown-content">
-                <a href="./CategoryHits/categoryToAll.html">MAN</a>
-                <a href="./CategoryHits/categoryToAll.html">WOMAN</a>
-                <a href="./CategoryHits/categoryToAll.html">KIDS</a>
+                <a href="./CategoryHits/category.php?category=Women">WOMEN</a>
+                <a href="./CategoryHits/category.php?category=Men">MEN</a>
+                <a href="./CategoryHits/category.php?category=Kids">KIDS</a>
               </div>
               </li>
               <li class="nav-item"><a href="./Contact_Page.html" class="nav-link" id="link1"> Contact Us</a></li>
